--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -43,6 +43,4 @@ jobs:
           az containerapp update \
             --name ${{ secrets.CONTAINER_APP_NAME }} \
             --resource-group ${{ secrets.RESOURCE_GROUP }} \
-            --image ${{ secrets.ACR_NAME }}.azurecr.io/payment-service:${{ github.sha }} \
-            --ingress external \
-            --target-port 8081
+            --image ${{ secrets.ACR_NAME }}.azurecr.io/payment-service:${{ github.sha }}
